[package]
name = "vulnera-secrets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vulnera-core = { path = "../vulnera-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Secret detection dependencies
walkdir = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
git2 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
datatest-stable = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
wiremock = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
